email-extractor-s3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-extractor
  namespace: email-extractor
  labels:
    app: email-extractor
spec:
  selector:
    app: email-extractor
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
